--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                 <div class="ambient-btn" data-sound="rain"  onclick="toggleAmbient('rain')"> <span class="a-icon">🌧️</span>Rain</div>
             </div>
             <div class="vol-row">
-                <label>VOL</label>
+                <label>Volume</label>
                 <input type="range" min="0" max="1" step="0.02" value="0.3" id="amb-vol" oninput="setAmbientVolume(this.value)">
             </div>
             </div><!-- /group-body ambient -->
